# cache-simulator

./: CMakeLists.txt  Makefile  README  README.txt  cache.cpp  cache.h  cacheblock.cpp  cacheblock.h  cacheconfig.cpp  cacheconfig.h  cacheset.cpp  cacheset.h  cachesimulator.cpp  cachesimulator.h  counter.cpp  counter.h  main.cpp  memory.cpp  memory.h  utils.cpp  utils.h
